edit the structer of element

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <header>
             <div class="logo_nav">
                 <div class="logo">
-                    <img src="/image-icon/logo-white.svg" alt="">
+                 <p><span>R</span> <span>P</span> <span>S</span><i></i></p>
+                 <img src="image-icon/coffee-icon-svgrepo-com.svg" alt="">
                 </div>
+                
                 <nav>
                     <ul>
                         <li> <a href="###">Home</a> </li>
@@ -106,10 +108,10 @@
                 </div>
             </section>
         </main>
+        <footer>
+            <p>Copyright &copy; 2023 Coffee Company</p>
+        </footer>
     </div>
-    <footer>
-        <p>Copyright &copy; 2023 Coffee Company</p>
-    </footer>
 </body>
 
 </html>
